# ida-cmake

./: .gitignore  README.md  idasdkConfig.cmake
templates/plugin-fetchcontent/: CMakeLists.txt
